@@ -105,21 +105,27 @@ public class DefaultRavenFactory extends RavenFactory {
      */
     public static final String ASYNC_QUEUE_SIZE_OPTION = "raven.async.queuesize";
     /**
-     * Option for the maximum size of the queue.
+     * Option for what to do when the async executor queue is full.
      */
     public static final String ASYNC_QUEUE_OVERFLOW_OPTION = "raven.async.queue.overflow";
     /**
-     * Option for the maximum size of the queue.
+     * Async executor overflow behavior that will discard old events in the queue.
      */
     public static final String ASYNC_QUEUE_DISCARDOLD = "discardold";
     /**
-     * Option for the maximum size of the queue.
+     * Async executor overflow behavior that will discard the new event that was attempting
+     * to be sent.
      */
     public static final String ASYNC_QUEUE_DISCARDNEW = "discardnew";
     /**
-     * Option for the maximum size of the queue.
+     * Async executor overflow behavior that will cause a synchronous send to occur on the
+     * current thread.
      */
-    public static final String ASYNC_QUEUE_BLOCK = "block";
+    public static final String ASYNC_QUEUE_SYNC = "sync";
+    /**
+     * Default behavior to use when the async executor queue is full.
+     */
+    public static final String ASYNC_QUEUE_OVERFLOW_DEFAULT = ASYNC_QUEUE_DISCARDOLD;
     /**
      * Option for the graceful shutdown timeout of the async executor, in milliseconds.
      */
@@ -152,30 +158,11 @@ public class DefaultRavenFactory extends RavenFactory {
     private static final Logger logger = LoggerFactory.getLogger(DefaultRavenFactory.class);
     private static final String FALSE = Boolean.FALSE.toString();
 
-    private static final Map<String, RejectedExecutionHandler> REJECT_EXECUTION_HANDLERS = new HashMap();
+    private static final Map<String, RejectedExecutionHandler> REJECT_EXECUTION_HANDLERS = new HashMap<>();
     static {
-        Map map = REJECT_EXECUTION_HANDLERS;
-        map.put(ASYNC_QUEUE_BLOCK.toUpperCase(), new ThreadPoolExecutor.CallerRunsPolicy());
-        map.put(ASYNC_QUEUE_DISCARDNEW.toUpperCase(), new ThreadPoolExecutor.DiscardPolicy());
-        map.put(ASYNC_QUEUE_DISCARDOLD.toUpperCase(), new ThreadPoolExecutor.DiscardOldestPolicy());
-        map.put(null, new ThreadPoolExecutor.DiscardOldestPolicy());
-    }
-
-    /**
-     * Get handler for tasks that cannot be executed by a {@link ThreadPoolExecutor}.
-     *
-     * @param dsn        Data Source Name of the Sentry server.
-     * @return an {@link RejectedExecutionHandler} to the server.
-     */
-    protected RejectedExecutionHandler getRejectedExecutionHandler(Dsn dsn) {
-        String value = dsn.getOptions().get(ASYNC_QUEUE_OVERFLOW_OPTION);
-        value = value == null
-                ? null
-                : value.toUpperCase();
-        RejectedExecutionHandler reh = REJECT_EXECUTION_HANDLERS.get(value);
-        return (reh == null)
-                ? REJECT_EXECUTION_HANDLERS.get(null)
-                : reh;
+        REJECT_EXECUTION_HANDLERS.put(ASYNC_QUEUE_SYNC, new ThreadPoolExecutor.CallerRunsPolicy());
+        REJECT_EXECUTION_HANDLERS.put(ASYNC_QUEUE_DISCARDNEW, new ThreadPoolExecutor.DiscardPolicy());
+        REJECT_EXECUTION_HANDLERS.put(ASYNC_QUEUE_DISCARDOLD, new ThreadPoolExecutor.DiscardOldestPolicy());
     }
 
     @Override
@@ -371,6 +358,28 @@ public class DefaultRavenFactory extends RavenFactory {
      */
     protected boolean getAsyncEnabled(Dsn dsn) {
         return !FALSE.equalsIgnoreCase(dsn.getOptions().get(ASYNC_OPTION));
+    }
+
+    /**
+     * Handler for tasks that cannot be immediately queued by a {@link ThreadPoolExecutor}.
+     *
+     * @param dsn Sentry server DSN which may contain options.
+     * @return Handler for tasks that cannot be immediately queued by a {@link ThreadPoolExecutor}.
+     */
+    protected RejectedExecutionHandler getRejectedExecutionHandler(Dsn dsn) {
+        String overflowName = ASYNC_QUEUE_OVERFLOW_DEFAULT;
+        if (dsn.getOptions().containsKey(ASYNC_QUEUE_OVERFLOW_OPTION)) {
+            overflowName = dsn.getOptions().get(ASYNC_QUEUE_OVERFLOW_OPTION).toLowerCase();
+        }
+
+        RejectedExecutionHandler handler = REJECT_EXECUTION_HANDLERS.get(overflowName);
+        if (handler == null) {
+            String options = Arrays.toString(REJECT_EXECUTION_HANDLERS.keySet().toArray());
+            throw new RuntimeException("RejectedExecutionHandler not found: '" + overflowName
+                + "', valid choices are: " + options);
+        }
+
+        return handler;
     }
 
     /**
